:white_check_mark: Update tutorial

--- a/mnist/tutorial_vol.yaml
+++ b/mnist/tutorial_vol.yaml
@@ -3,6 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: tutorial-volume
 spec:
+  storageClassName: seaweedfs-storage-nvme
   accessModes:
   - ReadWriteMany
   resources:
